[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tank/EnemyHull.png" type="Texture" id=2]
[ext_resource path="res://assets/tank/EnemyGun.png" type="Texture" id=3]
[ext_resource path="res://scripts/EnemyTankController.gd" type="Script" id=4]
[ext_resource path="res://scenes/bullets/EnemyBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/tank/FlashShell.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 124, 82 )

[sub_resource type="CircleShape2D" id=2]
radius = 55.0

[sub_resource type="CircleShape2D" id=3]
radius = 55.1453

[node name="EnemyTank" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 7
script = ExtResource( 4 )
max_health = 100
movement_speed = 75
Bullet = ExtResource( 5 )
gun_rotation_speed = 2.0
detect_radius = 750
follow_radius = 2000

[node name="Hull" parent="." index="0"]
texture = ExtResource( 2 )

[node name="Gun" parent="." index="1"]
position = Vector2( -40, 0 )
texture = ExtResource( 3 )
offset = Vector2( 55, 0 )

[node name="FirePosition" parent="Gun" index="0"]
position = Vector2( 170, 0 )

[node name="Flash" parent="Gun" index="1"]
position = Vector2( 170, 0 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( -2, 0 )
shape = SubResource( 1 )

[node name="DetectRadius" type="Area2D" parent="." index="6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]
modulate = Color( 1, 1, 0, 1 )
shape = SubResource( 2 )

[node name="FollowRadius" type="Area2D" parent="." index="7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowRadius" index="0"]
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="body_entered" from="FollowRadius" to="." method="_on_FollowRadius_body_entered"]
[connection signal="body_exited" from="FollowRadius" to="." method="_on_FollowRadius_body_exited"]
